# nursery

./: Cargo.toml
beam/: Cargo.toml
beam/benches/: cycle.rs
beam/src/: lib.rs  tests.rs
beam/src/tests/: mock.rs
beamsrch/: Cargo.toml
beamsrch/benches/: cycle.rs
beamsrch/src/: lib.rs  tests.rs
beamsrch/src/tests/: mock.rs
bspa/: Cargo.toml
bspa/benches/: atlas.rs  param.rs
bspa/src/: area.rs  lib.rs  node.rs
bspa/src/node/: assert.rs  tests.rs
bspa/src/types/: mod.rs  placement.rs  rect.rs  rect_group.rs
bspa/src/types/placement/: area.rs  tests.rs
bspa/src/types/rect/: area.rs
bspa/src/types/rect_group/: area.rs
bspa/tests/: atlas.rs
bspa/tests/common/: mod.rs
sprs/: Cargo.toml
sprs/benches/: ext_mut.rs  ext_ref.rs  map_mut.rs  map_ref.rs  set_mut.rs  set_ref.rs
sprs/src/: lib.rs
sprs/src/ext/: memmap2.rs  mod.rs
sprs/src/ext/memmap2/: buf_mut.rs  val_mut.rs
sprs/src/map/: impl_mut.rs  impl_ops.rs  impl_ref.rs  mod.rs  model.rs  tests.rs
sprs/src/map/impl_mut/: recall.rs
sprs/src/map/model/: memmap2.rs
sprs/src/set/: impl_mut.rs  impl_ops.rs  impl_ref.rs  mmap.rs  mod.rs  tests.rs
sprs/src/set/impl_mut/: recall.rs
sprs/src/set/impl_ops/: convert.rs  set_ops.rs
sprs/src/set/impl_ops/set_ops/: par.rs  seq.rs
sprs/src/set/impl_ref/: difference.rs  intersection.rs  symmetric_difference.rs  union.rs
sprs/src/set/impl_ref/difference/: par.rs  seq.rs
sprs/src/set/impl_ref/intersection/: par.rs  seq.rs
sprs/src/set/impl_ref/symmetric_difference/: par.rs  seq.rs
sprs/src/set/impl_ref/union/: par.rs  seq.rs
sprs/src/set/mmap/: mmap_mut_buf.rs  mmap_mut_val.rs
sprs/src/set/model/: default.rs  memmap2.rs
sprs/src/set/model/memmap2/: buf_mut.rs  val_mut.rs
sprs/tests/: map_uge.rs  set_uge.rs
sprsdata/: Cargo.toml
sprsdata/benches/: ext_mut.rs  ext_ref.rs  map_mut.rs  map_ref.rs  set_mut.rs  set_ref.rs
sprsdata/src/: lib.rs
sprsdata/src/map/: impl_mut.rs  impl_ref.rs  mod.rs  model.rs
sprsdata/src/map/impl_mut/: recall.rs
sprsdata/src/map/model/: default.rs
sprsdata/src/set/: impl_ops.rs  impl_ref.rs  mod.rs  model.rs  tests.rs
sprsdata/src/set/impl_mut/: recall.rs
sprsdata/src/set/impl_ops/: convert.rs  set_ops.rs
sprsdata/src/set/impl_ops/set_ops/: par.rs  seq.rs
sprsdata/src/set/impl_ref/: difference.rs
sprsdata/src/set/impl_ref/difference/: par.rs
sprsdata/src/set/impl_ref/intersection/: par.rs
sprsdata/src/set/impl_ref/symmetric_difference/: seq.rs
sprsdata/src/set/impl_ref/union/: seq.rs
sprsdata/src/set/model/: default.rs  memmap2.rs
sprsdata/tests/: map_uge.rs  set_uge.rs
