[package]
name = "beam"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = { workspace = true, optional = true }

[dev-dependencies]
itertools = { workspace = true, default-features = false }

divan.workspace = true
rand.workspace = true

[features]
default = []
rayon = ["dep:rayon"]

[[bench]]
name = "cycle"
harness = false
