[package]
name = "beam"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = { workspace = true, optional = true }

[dev-dependencies]
bencher.workspace = true
itertools = { workspace = true, default-features = false }
rand.workspace = true

[features]
default = []
rayon = ["dep:rayon"]

[[bench]]
name = "cycle"
harness = false
