[package]
name = "beamsrch"
version = "0.1.1"
authors = ["rosingrind"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Beam search heuristic abstraction"
repository = "https://github.com/rosingrind/nursery/tree/main/beamsrch"
keywords = ["heuristic", "algorithm"]
categories = ["algorithms", "simulation"]

[dependencies]
rayon = { workspace = true, optional = true }

[dev-dependencies]
bencher.workspace = true
itertools = { workspace = true, default-features = false }
rand.workspace = true

[features]
default = []
rayon = ["dep:rayon"]

[[bench]]
name = "cycle"
harness = false
