[package]
name = "bspa"
version = "0.1.0"
edition = "2024"

[dependencies]
beam = { version = "0.1.0", path = "../beam" }
itertools = { workspace = true, default-features = false }
likely_stable.workspace = true
rayon = { workspace = true, optional = true }
rustc-hash.workspace = true

[dev-dependencies]
bencher.workspace = true
image = "0.25.9"
rand = "0.9.2"

[features]
default = []
rayon = ["dep:rayon", "beam/rayon", "image/rayon"]
test-utils = []

[[bench]]
name = "atlas"
harness = false

[[bench]]
name = "param"
harness = false
