[package]
name = "bspa"
version = "0.1.0"
authors = ["rosingrind"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Beam search packing algorithm"
repository = "https://github.com/rosingrind/nursery/bspa"
keywords = ["packing", "algorithm"]
categories = ["algorithms", "compression"]

[dependencies]
beamsrch = { version = "0.1.0", path = "../beamsrch" }
itertools = { workspace = true, default-features = false }
likely_stable.workspace = true
rayon = { workspace = true, optional = true }
rustc-hash.workspace = true

[dev-dependencies]
bencher.workspace = true
image = "0.25.9"
rand = "0.9.2"

[features]
default = []
rayon = ["dep:rayon", "beamsrch/rayon", "image/rayon"]
test-utils = []

[[bench]]
name = "atlas"
harness = false

[[bench]]
name = "param"
harness = false
