[package]
name = "sprs"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcode = { version = "0.6", optional = true }
bitvec = { package = "bitvec_simd", version = "0.20.5" }
itertools.workspace = true
likely_stable = "0.1.3"
memmap2 = { version = "0.9.5", optional = true }
num-traits = "0.2.19"
rayon = { workspace = true, optional = true }

[dev-dependencies]
bencher.workspace = true
rand.workspace = true
sparsey = "0.13.3"

[features]
default = []
bitcode = ["dep:bitcode"]
inline-more = []
mmap = ["dep:memmap2"]
nightly = []
rayon = ["dep:rayon", "sparsey/parallel"]

[[bench]]
name = "ext_mut"
harness = false

[[bench]]
name = "map_mut"
harness = false

[[bench]]
name = "ext_ref"
harness = false

[[bench]]
name = "map_ref"
harness = false

[[bench]]
name = "set_mut"
harness = false

[[bench]]
name = "set_ref"
harness = false
