[package]
name = "sprsdata"
version = "0.1.0"
authors = ["rosingrind"]
edition = "2024"
description = "Data structures based on sparse and dense arrays"
repository = "https://github.com/rosingrind/nursery/sprs"
keywords = ["hashmap", "hashset", "map", "set", "nohash", "ecs"]
categories = ["data-structures"]

[dependencies]
bitvec = { package = "bitvec_simd", version = "0.20.5" }
itertools.workspace = true
likely_stable.workspace = true
memmap2 = { version = "0.9.9", optional = true }
num-traits = "0.2.19"
rayon = { workspace = true, optional = true }
tempfile = { version = "3.24.0", optional = true }

[dev-dependencies]
bencher.workspace = true
rand.workspace = true
sparsey = "0.13.3"

[features]
default = ["volatile"]
memmap2 = ["dep:memmap2", "dep:tempfile"]
nightly = []
rayon = ["dep:rayon", "sparsey/parallel"]
volatile = []

[[bench]]
name = "ext_mut"
harness = false

[[bench]]
name = "map_mut"
harness = false

[[bench]]
name = "ext_ref"
harness = false

[[bench]]
name = "map_ref"
harness = false

[[bench]]
name = "set_mut"
harness = false

[[bench]]
name = "set_ref"
harness = false
